signature tests ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <!--toast ok-->
     <string name="userAdd">Compte ajouté!</string>
     <string name="childAdd">Enfant ajouté!</string>
+    <string name="signTest">Test signé!</string>
 
 
 
