correction bug login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="userAdd">Compte ajouté!</string>
     <string name="childAdd">Enfant ajouté!</string>
     <string name="signTest">Test signé!</string>
+    <string name="signInOk">Connexion réussie</string>
 
 
 
