--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">SmartClass</string>
     <!--login-->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Mot de passe</string>
+    <string name="prompt_email">email</string>
+    <string name="prompt_password">mot de passe</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">se connecter</string>
-    <string name="welcome">"Bienvenue !"</string>
+    <string name="welcome">Bienvenue</string>
     <string name="invalid_username">email invalide</string>
     <string name="invalid_password">Mot de passe doit contenir plus de 8 caratères</string>
-    <string name="signup">S\'inscrire</string>
+    <string name="signup">s\'inscrire</string>
 
     <string name="login_failed">"La connexion a échoué"</string>
     <string name="title_activity_main">MainActivity</string>
@@ -55,31 +55,34 @@
     <string name="event_to_come">événement(s) cette semaine</string>
 
     <!--signup-->
-    <string name="welcomeMessage">Bienvenu chez SmartClass</string>
-    <string name="confirmPassword">Confirmer mot de passe</string>
-    <string name="firstname">Prénom</string>
-    <string name="lastname">Nom</string>
-    <string name="phoneNumber">Téléphone</string>
-    <string name="register">Enregistrer</string>
-    <string name="invalid_name">Champ obligatoire</string>
-    <string name="invalid_confirm_password">Mot de passe différent</string>
-    <string name="invalid_phone">Numéro de téléphone invalide</string>
+    <string name="welcomeMessage">Bienvenue</string>
+    <string name="confirmPassword">confirmer mot de passe</string>
+    <string name="firstname">prénom</string>
+    <string name="lastname">nom</string>
+    <string name="phoneNumber">téléphone</string>
+    <string name="register">enregistrer</string>
+    <string name="invalid_name">champ obligatoire</string>
+    <string name="invalid_confirm_password">mot de passe différent</string>
+    <string name="invalid_phone">numéro de téléphone invalide</string>
 
     <!--child-->
     <string name="chooseChild">Choix de l\'enfant</string>
     <string name="addChild">Ajouter un enfant</string>
-    <string name="addTheChild">Ajouter l\'enfant</string>
-    <string name="childLogin">Identifiant de l\'enfant</string>
-    <string name="childPassword">Mot de passe de l\'enfant</string>
-    <string name="messageChildSecretCode">Entrez les identifiants de l\'enfant</string>
+    <string name="addTheChild">connexion</string>
+    <string name="childLogin">identifiant de l\'enfant</string>
+    <string name="childPassword">mot de passe de l\'enfant</string>
+    <string name="messageChildSecretCodeAdd">Ajouter</string>
+    <string name="messageChildSecretCodeSecondPart">un Enfant</string>
 
     <!--toast error-->
     <string name="internetError">Vérifiez votre connexion internet!</string>
-    <string name="loginError">La combinaison email/mot de passe est invalide!</string>
+    <string name="loginError">Mot de passe est invalide!</string>
     <string name="generalError">Une erreur inconnue est survenue, veuillez réessayer!</string>
     <string name="queryError">Une erreur est survenue lors de la requête</string>
     <string name="signUpError">Ce compte existe déjà!</string>
     <string name="emptyFieldError">Au moins un des champs est vide!</string>
+    <string name="childAlreadyLinkedError">Cet enfant à déjà été lié à ce compte!</string>
+    <string name="userNotFoundError">Cet utilisateur n\'existe pas!</string>
 
     <!--toast ok-->
     <string name="userAdd">Compte ajouté!</string>
