--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
 
     <!--toast error-->
     <string name="internetError">Vérifiez votre connexion internet!</string>
-    <string name="loginError">Mot de passe est invalide!</string>
+    <string name="loginError">Le mot de passe est incorrect!</string>
     <string name="generalError">Une erreur inconnue est survenue, veuillez réessayer!</string>
     <string name="queryError">Une erreur est survenue lors de la requête</string>
     <string name="signUpError">Ce compte existe déjà!</string>
